2007-11-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c: Avoid GimpRectangleTool internals
	to make use of its own public interface by making
	gimp_rectangle_tool_get_other_side() work on pointers to members
	instead of GObject property names.
	(gimp_rectangle_tool_set_other_side_coord)
	(gimp_rectangle_tool_get_other_side_coord): Use
	gimp_rectangle_tool_get_other_side() in the new way.

2007-11-13  Martin Nordholts  <martinn@svn.gnome.org>

	Fixed warnings about negative rectangle widths/heights when
	toggling 'Fixed center' while rubber banding a rectangle.

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_set_other_side_coord): Finnishing off with a
	call to gimp_rectangle_tool_check_function() as changing the
	coordinates of the opposite side might swap the orientation of the
	rectangle.

2007-11-13  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-merge.c (gimp_image_merge_layers): when we
	encounter an unsupported merge operation (merging an opaque
	indexed layer onto an indexed layer with alpha channel), then add
	an alpha channel and try again. Fixes bug #496437.

2007-11-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewrenderer.c (gimp_view_renderer_draw): use
	cairo_save()/cairo_restore() around calling the virtual function
	instead of restoring the clipping area manually.

2007-11-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewrenderervectors.c
	(gimp_view_renderer_vectors_draw): naive port to Cairo. Somebody
	should check if this isn't better done with proper curve_to()
	drawing using the original vectors data instead of interpolation.

	* app/widgets/gimpviewrenderer.c (gimp_view_renderer_draw): reset
	clipping before drawing the border because a subclass' draw()
	might have done additional clipping.

2007-11-13  Tor Lillqvist  <tml@novell.com>

	* gimptool-win32.c.in: Some cleanups, more coming.

2007-11-13  Sven Neumann  <sven@gimp.org>
